--- a/index.html
+++ b/index.html
@@ -1,85 +1,297 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>Квартира 🌸 Бета</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <title>Милая квартира с комнатами</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
-      background-color: #ffe4f1;
-      font-family: 'Comic Sans MS', sans-serif;
+      font-family: 'Comic Sans MS', cursive, sans-serif;
+      background: #fce7f3;
+      overflow-x: hidden;
+      user-select: none;
     }
+
+    #room-container {
+      width: 100vw;
+      height: 90vh;
+      position: relative;
+      margin-top: 1rem;
+      overflow: hidden;
+      border-radius: 1rem;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.15);
+      background-size: cover;
+      background-position: center;
+      transition: background-image 0.6s ease;
+    }
+
+    .floor {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 30%;
+      transition: background 0.6s ease;
+      border-top-left-radius: 1rem;
+      border-top-right-radius: 1rem;
+      z-index: 0;
+    }
+
     .furniture {
-      width: 64px;
-      height: 64px;
+      width: 70px;
+      height: 70px;
       position: absolute;
       cursor: grab;
+      user-select: none;
+      transition: transform 0.2s ease;
+      border-radius: 0.5rem;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    }
+    .furniture:active {
+      cursor: grabbing;
+      transform: scale(1.05);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+      z-index: 1000;
+    }
+
+    .controls {
+      display: flex;
+      justify-content: center;
+      gap: 1rem;
+      margin-top: 1rem;
+      user-select: none;
+    }
+
+    button {
+      background: #fff;
+      padding: 0.5rem 1.2rem;
+      border-radius: 0.75rem;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+      font-weight: bold;
+      color: #b91c1c;
+      transition: background 0.3s ease;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #fbcfe8;
+    }
+
+    #furniture-panel {
+      background: #fff;
+      padding: 0.5rem;
+      border-radius: 0.75rem;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+      display: flex;
+      gap: 1rem;
+      margin-top: 1rem;
+      justify-content: center;
+      user-select: none;
+    }
+
+    #furniture-panel img {
+      width: 60px;
+      height: 60px;
+      border-radius: 0.5rem;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+      cursor: pointer;
+      transition: transform 0.3s ease;
+    }
+    #furniture-panel img:hover {
+      transform: scale(1.1);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+    }
+
+    .fade-enter {
+      opacity: 0;
+      transform: translateX(100%);
+    }
+    .fade-enter-active {
+      opacity: 1;
+      transform: translateX(0);
+      transition: all 0.5s ease;
+    }
+    .fade-exit {
+      opacity: 1;
+      transform: translateX(0);
+    }
+    .fade-exit-active {
+      opacity: 0;
+      transform: translateX(-100%);
+      transition: all 0.5s ease;
     }
   </style>
 </head>
-<body class="relative h-screen overflow-hidden">
+<body>
 
-  <!-- Верхняя панель -->
-  <div class="fixed top-0 w-full bg-pink-200 p-3 flex justify-between items-center z-50">
-    <h1 class="text-xl font-bold text-pink-800">Твоя милая квартира 🏠</h1>
-    <button onclick="toggleFurniturePanel()" class="bg-white px-4 py-2 rounded-xl shadow hover:bg-pink-100 transition">
-      🛋️ Мебель
-    </button>
+  <h1 class="text-center text-3xl font-bold text-pink-600 mt-4 select-none">Милая квартира с комнатами 💖</h1>
+
+  <div class="controls">
+    <button id="left-btn" aria-label="Предыдущая комната">&larr; Назад</button>
+    <button id="right-btn" aria-label="Следующая комната">Вперёд &rarr;</button>
   </div>
 
-  <!-- Панель мебели -->
-  <div id="furniturePanel" class="fixed bottom-0 left-0 w-full bg-white border-t-2 border-pink-300 p-3 flex gap-4 justify-center hidden z-50">
-    <img src="https://cdn-icons-png.flaticon.com/512/609/609803.png" alt="Диван" draggable="false" onclick="addFurniture(this.src)" class="w-12 h-12 hover:scale-110 transition">
-    <img src="https://cdn-icons-png.flaticon.com/512/1128/1128551.png" alt="Кровать" draggable="false" onclick="addFurniture(this.src)" class="w-12 h-12 hover:scale-110 transition">
-    <img src="https://cdn-icons-png.flaticon.com/512/1046/1046857.png" alt="Кресло" draggable="false" onclick="addFurniture(this.src)" class="w-12 h-12 hover:scale-110 transition">
-    <img src="https://cdn-icons-png.flaticon.com/512/2462/2462719.png" alt="Стол" draggable="false" onclick="addFurniture(this.src)" class="w-12 h-12 hover:scale-110 transition">
+  <div id="room-container" aria-live="polite" aria-atomic="true" role="region" tabindex="0">
+    <div id="floor" class="floor"></div>
   </div>
 
-  <!-- Игровая зона -->
-  <div id="room" class="w-full h-full relative pt-20">
-    <!-- Мебель будет сюда добавляться -->
+  <div id="furniture-panel" aria-label="Панель мебели" role="region">
+    <img src="https://cdn-icons-png.flaticon.com/512/609/609803.png" alt="Диван" title="Диван" data-type="sofa" />
+    <img src="https://cdn-icons-png.flaticon.com/512/1046/1046857.png" alt="Кресло" title="Кресло" data-type="armchair" />
+    <img src="https://cdn-icons-png.flaticon.com/512/2462/2462719.png" alt="Стул" title="Стул" data-type="chair" />
+    <img src="https://cdn-icons-png.flaticon.com/512/1128/1128551.png" alt="Стол" title="Стол" data-type="table" />
+  </div>
+
+  <div class="controls mt-4">
+    <label for="wallpaper-select" class="text-pink-700 font-semibold mr-2 select-none">Обои:</label>
+    <select id="wallpaper-select" aria-label="Выбор обоев">
+      <option value="wall1">Розовые цветочки</option>
+      <option value="wall2">Мятные полосы</option>
+      <option value="wall3">Горошек</option>
+    </select>
+
+    <label for="floor-select" class="text-pink-700 font-semibold ml-6 mr-2 select-none">Пол:</label>
+    <select id="floor-select" aria-label="Выбор пола">
+      <option value="floor1">Дерево светлое</option>
+      <option value="floor2">Паркет тёмный</option>
+      <option value="floor3">Плитка мята</option>
+    </select>
   </div>
 
   <script>
-    function toggleFurniturePanel() {
-      const panel = document.getElementById('furniturePanel');
-      panel.classList.toggle('hidden');
+    // Комнаты: 3 штуки с разными обоями и полом по умолчанию
+    const rooms = [
+      { id: 0, wallpaper: 'wall1', floor: 'floor1', furnitures: [] },
+      { id: 1, wallpaper: 'wall2', floor: 'floor2', furnitures: [] },
+      { id: 2, wallpaper: 'wall3', floor: 'floor3', furnitures: [] },
+    ];
+    let currentRoom = 0;
+
+    const wallpaperImages = {
+      wall1: 'https://i.pinimg.com/originals/ed/aa/0c/edaa0cde2717d70dbf4d6875eb7e0b24.jpg',  // милый розовый фон с цветочками
+      wall2: 'https://i.pinimg.com/originals/56/8e/67/568e6710e1bdbfb4c79e8392ebc7d4e0.jpg',  // мятные полосы
+      wall3: 'https://cdn.wallpapersafari.com/11/18/QMJe9X.jpg',                                  // зеленый горошек
+    };
+
+    const floorImages = {
+      floor1: 'https://images.unsplash.com/photo-1505692952044-86409c1412b2?auto=format&fit=crop&w=800&q=80', // светлое дерево
+      floor2: 'https://images.unsplash.com/photo-1543076447-215ad9ba6924?auto=format&fit=crop&w=800&q=80', // темный паркет
+      floor3: 'https://images.unsplash.com/photo-1505751172876-fa1923c5c528?auto=format&fit=crop&w=800&q=80', // плитка мятная
+    };
+
+    const roomContainer = document.getElementById('room-container');
+    const floorDiv = document.getElementById('floor');
+    const wallpaperSelect = document.getElementById('wallpaper-select');
+    const floorSelect = document.getElementById('floor-select');
+    const leftBtn = document.getElementById('left-btn');
+    const rightBtn = document.getElementById('right-btn');
+    const furniturePanel = document.getElementById('furniture-panel');
+
+    // Загружаем комнату
+    function loadRoom(index, direction = 0) {
+      if (index < 0) index = rooms.length -1;
+      if (index >= rooms.length) index = 0;
+      currentRoom = index;
+      const room = rooms[currentRoom];
+
+      // Анимация смены комнаты (сдвиг слева или справа)
+      roomContainer.style.opacity = '0';
+      setTimeout(() => {
+        roomContainer.style.backgroundImage = `url(${wallpaperImages[room.wallpaper]})`;
+        floorDiv.style.backgroundImage = `url(${floorImages[room.floor]})`;
+        wallpaperSelect.value = room.wallpaper;
+        floorSelect.value = room.floor;
+
+        // Удаляем старую мебель
+        roomContainer.querySelectorAll('.furniture').forEach(el => el.remove());
+        // Добавляем мебель комнаты
+        room.furnitures.forEach(furn => {
+          const f = createFurnitureElement(furn.type, furn.x, furn.y);
+          roomContainer.appendChild(f);
+        });
+
+        roomContainer.style.opacity = '1';
+      }, 300);
     }
 
-    function addFurniture(src) {
-      const item = document.createElement('img');
-      item.src = src;
-      item.className = 'furniture';
-      item.style.left = '150px';
-      item.style.top = '150px';
-      makeDraggable(item);
-      document.getElementById('room').appendChild(item);
-    }
+    // Создать элемент мебели
+    function createFurnitureElement(type, x = 50, y = 200) {
+      const el = document.createElement('img');
+      el.classList.add('furniture');
+      el.setAttribute('draggable', 'false');
+      el.src = furniturePanel.querySelector(`img[data-type="${type}"]`).src;
+      el.alt = type;
+      el.style.left = x + 'px';
+      el.style.top = y + 'px';
 
-    function makeDraggable(el) {
-      let isDragging = false;
-      let offsetX = 0, offsetY = 0;
+      // Drag and drop мебель
+      let offsetX, offsetY;
+      el.addEventListener('mousedown', e => {
+        offsetX = e.clientX - el.getBoundingClientRect().left;
+        offsetY = e.clientY - el.getBoundingClientRect().top;
+        el.style.cursor = 'grabbing';
 
-      el.addEventListener('mousedown', (e) => {
-        isDragging = true;
-        offsetX = e.clientX - el.offsetLeft;
-        offsetY = e.clientY - el.offsetTop;
-        el.style.zIndex = 1000;
-      });
-
-      document.addEventListener('mousemove', (e) => {
-        if (isDragging) {
+        function onMouseMove(e) {
           el.style.left = (e.clientX - offsetX) + 'px';
           el.style.top = (e.clientY - offsetY) + 'px';
         }
+
+        function onMouseUp(e) {
+          document.removeEventListener('mousemove', onMouseMove);
+          document.removeEventListener('mouseup', onMouseUp);
+          el.style.cursor = 'grab';
+          // Сохраняем позицию в текущей комнате
+          const room = rooms[currentRoom];
+          const furn = room.furnitures.find(f => f.el === el);
+          if (furn) {
+            furn.x = parseInt(el.style.left);
+            furn.y = parseInt(el.style.top);
+          }
+        }
+
+        document.addEventListener('mousemove', onMouseMove);
+        document.addEventListener('mouseup', onMouseUp);
       });
 
-      document.addEventListener('mouseup', () => {
-        isDragging = false;
-        el.style.zIndex = '';
-      });
+      return el;
     }
+
+    // Добавить мебель в комнату при клике по панели
+    furniturePanel.addEventListener('click', e => {
+      if (e.target.tagName !== 'IMG') return;
+      const type = e.target.getAttribute('data-type');
+      const room = rooms[currentRoom];
+      const newFurn = {type, x: 100, y: 220, el: null};
+      room.furnitures.push(newFurn);
+
+      const el = createFurnitureElement(type, newFurn.x, newFurn.y);
+      newFurn.el = el;
+      roomContainer.appendChild(el);
+    });
+
+    wallpaperSelect.addEventListener('change', e => {
+      rooms[currentRoom].wallpaper = e.target.value;
+      roomContainer.style.backgroundImage = `url(${wallpaperImages[e.target.value]})`;
+    });
+
+    floorSelect.addEventListener('change', e => {
+      rooms[currentRoom].floor = e.target.value;
+      floorDiv.style.backgroundImage = `url(${floorImages[e.target.value]})`;
+    });
+
+    leftBtn.addEventListener('click', () => loadRoom(currentRoom - 1));
+    rightBtn.addEventListener('click', () => loadRoom(currentRoom + 1));
+
+    // Управление клавишами ← и →
+    window.addEventListener('keydown', e => {
+      if (e.key === 'ArrowLeft') {
+        loadRoom(currentRoom - 1);
+      } else if (e.key === 'ArrowRight') {
+        loadRoom(currentRoom + 1);
+      }
+    });
+
+    // Загрузка первой комнаты при старте
+    loadRoom(0);
   </script>
 </body>
 </html>
