--- a/index.html
+++ b/index.html
@@ -1,200 +1,160 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Милая квартира — бета</title>
-  <style>
-    body, html {
-      margin:0; padding:0; height:100vh; overflow:hidden;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #faf8f5;
-      display: flex;
-      flex-direction: column;
-      user-select: none;
-    }
-    #roomContainer {
-      flex: 1;
-      position: relative;
-      background: repeating-linear-gradient(
-        45deg,
-        #cde7d8,
-        #cde7d8 20px,
-        #b5d6c1 20px,
-        #b5d6c1 40px
-      );
-      transition: background 0.5s ease;
-      overflow: hidden;
-    }
-    #floorDiv {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 150px;
-      background: repeating-linear-gradient(
-        to right,
-        #d3c3a4,
-        #d3c3a4 30px,
-        #cbb793 30px,
-        #cbb793 60px
-      );
-      box-shadow: inset 0 5px 15px rgba(0,0,0,0.15);
-      transition: background 0.5s ease;
-      z-index: 1;
-    }
-    #furniturePanel {
-      height: 130px;
-      background: #fff;
-      border-top: 1px solid #ddd;
-      display: flex;
-      overflow-x: auto;
-      padding: 10px;
-      box-sizing: border-box;
-    }
-    #furniturePanel img {
-      width: 80px;
-      height: 80px;
-      margin-right: 10px;
-      border-radius: 12px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      cursor: pointer;
-      transition: transform 0.3s ease;
-    }
-    #furniturePanel img:hover {
-      transform: scale(1.1);
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-    }
-    .furniture {
-      position: absolute;
-      cursor: grab;
-      user-select: none;
-      transition: transform 0.3s ease, opacity 0.4s ease;
-      will-change: transform;
-      z-index: 10;
-    }
-    .furniture:active {
-      cursor: grabbing;
-    }
-    #controls {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin: 8px 0;
-      user-select: none;
-    }
-    button {
-      padding: 10px 16px;
-      border-radius: 8px;
-      border: none;
-      background: #a3d9b1;
-      color: #14532d;
-      font-weight: 600;
-      font-size: 16px;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-    button:hover {
-      background: #79c06c;
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Квартира — редактор</title>
+<style>
+  body, html {
+    margin:0; padding:0; height:100vh; display:flex; flex-direction: column;
+    font-family: Arial, sans-serif; background: #fafafa;
+  }
+  #roomContainer {
+    flex: 1; position: relative; overflow: hidden;
+    transition: background 0.7s ease;
+    background: white;
+  }
+  #floorDiv {
+    position: absolute; bottom: 0; left: 0; width: 100%; height: 150px;
+    background: white;
+    box-shadow: inset 0 5px 10px rgba(0,0,0,0.1);
+    transition: background 0.7s ease;
+    z-index: 1;
+  }
+  #controls {
+    display: flex; gap: 10px; padding: 10px; background: #fff;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    align-items: center;
+  }
+  button, select {
+    padding: 8px 12px; border-radius: 6px; border: 1px solid #ccc;
+    cursor: pointer; background: #f5f5f5;
+  }
+  button:hover, select:hover {
+    background: #e0e0e0;
+  }
+  #furniturePanel {
+    height: 120px; background: #fff; border-top: 1px solid #ddd;
+    overflow-x: auto; display: flex; align-items: center; padding: 10px;
+  }
+  #furniturePanel img {
+    width: 80px; height: 80px; margin-right: 10px; cursor: pointer;
+    border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    transition: transform 0.3s;
+  }
+  #furniturePanel img:hover {
+    transform: scale(1.1);
+    box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+  }
+  .furniture {
+    position: absolute; cursor: grab; user-select: none;
+    transition: transform 0.3s ease, opacity 0.4s ease;
+    will-change: transform;
+    z-index: 10;
+  }
+  .furniture:active {
+    cursor: grabbing;
+  }
+</style>
 </head>
 <body>
 
-  <div id="roomContainer">
-    <div id="floorDiv"></div>
-  </div>
+<div id="controls">
+  <button id="addRoomBtn">➕ Добавить комнату</button>
+  <button id="prevRoomBtn">← Предыдущая комната</button>
+  <button id="nextRoomBtn">Следующая комната →</button>
 
-  <div id="controls">
-    <button id="leftBtn">← Назад</button>
-    <button id="rightBtn">Вперёд →</button>
-  </div>
+  <label>Обои:
+    <select id="wallpaperSelect">
+      <option value="white">Белые</option>
+      <option value="pattern1">Зеленый узор</option>
+      <option value="pattern2">Розовый узор</option>
+      <option value="pattern3">Геометрия</option>
+    </select>
+  </label>
 
-  <div id="furniturePanel"></div>
+  <label>Пол:
+    <select id="floorSelect">
+      <option value="white">Белый</option>
+      <option value="floor1">Дерево светлое</option>
+      <option value="floor2">Дерево темное</option>
+      <option value="floor3">Плитка серая</option>
+    </select>
+  </label>
+</div>
+
+<div id="roomContainer">
+  <div id="floorDiv"></div>
+</div>
+
+<div id="furniturePanel"></div>
 
 <script>
   const roomContainer = document.getElementById('roomContainer');
   const floorDiv = document.getElementById('floorDiv');
+  const wallpaperSelect = document.getElementById('wallpaperSelect');
+  const floorSelect = document.getElementById('floorSelect');
   const furniturePanel = document.getElementById('furniturePanel');
-  const leftBtn = document.getElementById('leftBtn');
-  const rightBtn = document.getElementById('rightBtn');
+  const addRoomBtn = document.getElementById('addRoomBtn');
+  const prevRoomBtn = document.getElementById('prevRoomBtn');
+  const nextRoomBtn = document.getElementById('nextRoomBtn');
 
-  // Текстуры пола и обоев (CSS паттерны)
-  const wallpaperPatterns = [
-    'repeating-linear-gradient(45deg, #cde7d8, #cde7d8 20px, #b5d6c1 20px, #b5d6c1 40px)',
-    'repeating-radial-gradient(circle at center, #ffe4e1 0, #f4a8a8 30px)',
-    'repeating-linear-gradient(90deg, #f0f3f5 0, #f0f3f5 10px, #d0d5db 10px, #d0d5db 20px)',
-    'repeating-linear-gradient(135deg, #f9e7e7, #f9e7e7 15px, #fadede 15px, #fadede 30px)'
-  ];
-  const floorPatterns = [
-    'repeating-linear-gradient(to right, #d3c3a4, #d3c3a4 30px, #cbb793 30px, #cbb793 60px)',
-    'repeating-linear-gradient(to right, #8b7d6b, #8b7d6b 15px, #a79987 15px, #a79987 30px)',
-    'repeating-linear-gradient(45deg, #f0e6d2, #f0e6d2 20px, #dccba7 20px, #dccba7 40px)',
-    'repeating-linear-gradient(to right, #e6e6e6, #e6e6e6 25px, #c0c0c0 25px, #c0c0c0 50px)'
-  ];
+  const wallpaperStyles = {
+    white: 'white',
+    pattern1: 'repeating-linear-gradient(45deg, #cde7d8, #cde7d8 20px, #b5d6c1 20px, #b5d6c1 40px)',
+    pattern2: 'repeating-radial-gradient(circle at center, #ffe4e1 0, #f4a8a8 30px)',
+    pattern3: 'repeating-linear-gradient(135deg, #f9e7e7, #f9e7e7 15px, #fadede 15px, #fadede 30px)'
+  };
 
-  // Мебель — расширенный список (20 для примера, потом можно добавить)
+  const floorStyles = {
+    white: 'white',
+    floor1: 'repeating-linear-gradient(to right, #d3c3a4, #d3c3a4 30px, #cbb793 30px, #cbb793 60px)',
+    floor2: 'repeating-linear-gradient(to right, #8b7d6b, #8b7d6b 15px, #a79987 15px, #a79987 30px)',
+    floor3: 'repeating-linear-gradient(to right, #e6e6e6, #e6e6e6 25px, #c0c0c0 25px, #c0c0c0 50px)'
+  };
+
   const furnitureItems = [
     { type: 'sofa', src: 'https://i.postimg.cc/2jX9v8DB/sofa.png', name: 'Диван' },
     { type: 'chair', src: 'https://i.postimg.cc/3x87wQ6D/chair.png', name: 'Кресло' },
     { type: 'table', src: 'https://i.postimg.cc/y6Xm8MWr/table.png', name: 'Стол' },
     { type: 'lamp', src: 'https://i.postimg.cc/9f3fF5mh/lamp.png', name: 'Лампа' },
-    { type: 'plant', src: 'https://i.postimg.cc/jdX0RxwG/plant.png', name: 'Растение' },
-    { type: 'bed', src: 'https://i.postimg.cc/7hC5YCRs/bed.png', name: 'Кровать' },
-    { type: 'bookshelf', src: 'https://i.postimg.cc/3NxVQvD0/bookshelf.png', name: 'Книжный шкаф' },
-    { type: 'carpet', src: 'https://i.postimg.cc/Ls8LHqgm/carpet.png', name: 'Ковер' },
-    { type: 'desk', src: 'https://i.postimg.cc/yN1jhYLD/desk.png', name: 'Письменный стол' },
-    { type: 'tv', src: 'https://i.postimg.cc/B6V4kFvx/tv.png', name: 'Телевизор' },
-    { type: 'clock', src: 'https://i.postimg.cc/J4Zngwxf/clock.png', name: 'Часы' },
-    { type: 'dresser', src: 'https://i.postimg.cc/sx6fPxGd/dresser.png', name: 'Комод' },
-    { type: 'stool', src: 'https://i.postimg.cc/RZcfkTsW/stool.png', name: 'Табурет' },
-    { type: 'sofa2', src: 'https://i.postimg.cc/Px4rHXrm/sofa2.png', name: 'Диван 2' },
-    { type: 'chair2', src: 'https://i.postimg.cc/sx66pxLV/chair2.png', name: 'Кресло 2' },
-    { type: 'shelf', src: 'https://i.postimg.cc/MTXqFZB5/shelf.png', name: 'Полка' },
-    { type: 'plant2', src: 'https://i.postimg.cc/DzLdR4j2/plant2.png', name: 'Растение 2' },
-    { type: 'floorlamp', src: 'https://i.postimg.cc/4NmnzMs7/floorlamp.png', name: 'Торшер' },
-    { type: 'chair3', src: 'https://i.postimg.cc/0y9v9FKb/chair3.png', name: 'Кресло 3' },
-    { type: 'desk2', src: 'https://i.postimg.cc/t4hFNrqz/desk2.png', name: 'Письменный стол 2' }
+    { type: 'plant', src: 'https://i.postimg.cc/jdX0RxwG/plant.png', name: 'Растение' }
   ];
 
   let rooms = [
-    { wallpaper: 0, floor: 0, furnitures: [] },
-    { wallpaper: 1, floor: 1, furnitures: [] },
-    { wallpaper: 2, floor: 2, furnitures: [] }
+    { wallpaper: 'white', floor: 'white', furnitures: [] },
+    { wallpaper: 'white', floor: 'white', furnitures: [] },
+    { wallpaper: 'white', floor: 'white', furnitures: [] }
   ];
-
   let currentRoom = 0;
 
-  function loadRoom(index) {
-    if(index < 0) index = rooms.length - 1;
-    if(index >= rooms.length) index = 0;
-    currentRoom = index;
+  function renderRoom() {
     const room = rooms[currentRoom];
+    roomContainer.style.background = wallpaperStyles[room.wallpaper];
+    floorDiv.style.background = floorStyles[room.floor];
 
-    roomContainer.style.opacity = '0';
-    setTimeout(() => {
-      roomContainer.style.background = wallpaperPatterns[room.wallpaper];
-      floorDiv.style.background = floorPatterns[room.floor];
+    wallpaperSelect.value = room.wallpaper;
+    floorSelect.value = room.floor;
 
-      // Удаляем старую мебель
-      roomContainer.querySelectorAll('.furniture').forEach(el => el.remove());
-      // Добавляем мебель
-      room.furnitures.forEach(furn => {
-        const el = createFurnitureElement(furn.type, furn.x, furn.y);
-        roomContainer.appendChild(el);
-      });
+    // Очистить мебель
+    roomContainer.querySelectorAll('.furniture').forEach(el => el.remove());
 
-      roomContainer.style.opacity = '1';
-    }, 350);
+    // Добавить мебель
+    room.furnitures.forEach(furn => {
+      const el = createFurnitureElement(furn.type, furn.x, furn.y);
+      roomContainer.appendChild(el);
+      furn.el = el;
+    });
   }
 
-  function createFurnitureElement(type, x=100, y=220) {
+  function createFurnitureElement(type, x=100, y=200) {
     const item = furnitureItems.find(f => f.type === type);
-    if(!item) return null;
+    if (!item) return null;
+
     const el = document.createElement('img');
-    el.classList.add('furniture');
     el.src = item.src;
     el.alt = item.name;
+    el.classList.add('furniture');
     el.style.left = x + 'px';
     el.style.top = y + 'px';
 
@@ -214,9 +174,9 @@
         document.removeEventListener('mouseup', onUp);
         el.style.cursor = 'grab';
 
-        // Обновить позицию в комнате
+        // Обновить позицию мебели в комнате
         const furn = rooms[currentRoom].furnitures.find(f => f.el === el);
-        if(furn) {
+        if (furn) {
           furn.x = parseInt(el.style.left);
           furn.y = parseInt(el.style.top);
         }
@@ -237,27 +197,50 @@
   });
 
   furniturePanel.addEventListener('click', e => {
-    if(e.target.tagName === 'IMG') {
+    if (e.target.tagName === 'IMG') {
       const type = e.target.getAttribute('data-type');
       const el = createFurnitureElement(type);
-      if(el) {
-        rooms[currentRoom].furnitures.push({type, x: 100, y: 220, el});
+      if (el) {
+        rooms[currentRoom].furnitures.push({ type, x: 100, y: 200, el });
         roomContainer.appendChild(el);
       }
     }
   });
 
-  leftBtn.addEventListener('click', () => loadRoom(currentRoom - 1));
-  rightBtn.addEventListener('click', () => loadRoom(currentRoom + 1));
-
-  document.addEventListener('keydown', e => {
-    if(e.key === 'ArrowLeft') loadRoom(currentRoom - 1);
-    if(e.key === 'ArrowRight') loadRoom(currentRoom + 1);
+  wallpaperSelect.addEventListener('change', () => {
+    rooms[currentRoom].wallpaper = wallpaperSelect.value;
+    // плавно меняем фон
+    roomContainer.style.transition = 'background 0.7s ease';
+    renderRoom();
   });
 
-  loadRoom(currentRoom);
+  floorSelect.addEventListener('change', () => {
+    rooms[currentRoom].floor = floorSelect.value;
+    floorDiv.style.transition = 'background 0.7s ease';
+    renderRoom();
+  });
+
+  addRoomBtn.addEventListener('click', () => {
+    rooms.push({ wallpaper: 'white', floor: 'white', furnitures: [] });
+    currentRoom = rooms.length - 1;
+    renderRoom();
+  });
+
+  prevRoomBtn.addEventListener('click', () => {
+    if (currentRoom > 0) {
+      currentRoom--;
+      renderRoom();
+    }
+  });
+  nextRoomBtn.addEventListener('click', () => {
+    if (currentRoom < rooms.length - 1) {
+      currentRoom++;
+      renderRoom();
+    }
+  });
+
+  renderRoom();
 </script>
 
 </body>
 </html>
-
